# ezegm

./: .zenodo.json  CITATION.cff  README.md  myst.yml  pyproject.toml  reproduce.sh
binder/: environment.yml  postBuild
code/: LICENSE  README.md  benchmark_paper.py  ez_egm.py  utils.py
content/: LICENSE  references.bib
content/paper/: ezegm.md  ezegm_appendix.md  ezegm_full.md
